--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "redis": "^3.1.0",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "uuid": "^8.3.2"
   }
 }
