--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^5.1.0",
     "cors": "^2.8.5",
@@ -20,8 +21,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "multer": "^1.4.2",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "redis": "^3.1.0",
+    "request": "^2.88.2",
     "socket.io": "^4.0.0",
     "uuid": "^8.3.2"
   }
