--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-DB=mongodb+srv://bidadmin:wai4wiku@cluster0.pu3fv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB=mongodb+srv://...
 PORT=8000
 SESSION_SECRET=fnfhkjdshjfhak
 JWT_SECRET=fdjkzfhsdjkhk
 REDIS_HOST=localhost
 REDIS_PORT=6379
-PAYPAL_CLIENT=AURAriqs6aGTOEa1FB6rRgtTk_Eih0K9iDVLStRmlfgwdSkrjZG-_3xzb2Qezrb0kGAodwalS0JO1u4F
-PAYPAL_SECRET=EMm3mIo3-vbcVaQ_8f1qqbr513ufrXRTUeWpDx6t9CSBVgeXEzwv-l5Pn_gqLwwS_X_J1wetM7jF4yc8
+PAYPAL_CLIENT=
+PAYPAL_SECRET=
 PAYPAL_API=https://api-m.sandbox.paypal.com
-MAIL_SERVICE_USER='dimitristzilop.carpetu2@gmail.com'
-MAIL_SERVICE_PASSWORD='noisepageant123'
+MAIL_SERVICE_USER=
+MAIL_SERVICE_PASSWORD=
